unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/Account_Plan_Pre_Sales__c.object-meta.xml
<CustomObject>
    <label>Account Plan - Pre-Sales</label>
    <nameField>
        <label>Account Plan - Pre-Sales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans - Pre-Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>