unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Acquirer__c.field-meta.xml
<CustomField>
    <fullName>Acquirer__c</fullName>
    <label>Acquirer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Plans - Pre-Sales</relationshipLabel>
    <relationshipName>Account_Plans_Pre_Sales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>