unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Blended_Hit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Blended_Hit_Rate__c</fullName>
    <formula>Penetration_Rate__c *  Currency_Coverage__c *  Hit_rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blended Hit Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>