unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plans_Pre_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>