unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Client_Profile__c.field-meta.xml
<CustomField>
    <fullName>Client_Profile__c</fullName>
    <label>Client Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>