unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Contract_renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_renewal_Date__c</fullName>
    <label>Contract renewal Date</label>
    <type>Date</type>
</CustomField>