unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Contract_signed__c.field-meta.xml
<CustomField>
    <fullName>Contract_signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract signed</label>
    <type>Checkbox</type>
</CustomField>