unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Contract_signed_date__c.field-meta.xml
<CustomField>
    <fullName>Contract_signed_date__c</fullName>
    <label>Contract signed date</label>
    <type>Date</type>
</CustomField>