unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Currency_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Currency_Coverage__c</fullName>
    <label>Currency Coverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>