unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/eComm_Value__c.field-meta.xml
<CustomField>
    <fullName>eComm_Value__c</fullName>
    <label>eComm Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>