unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Existing_eComm_DCC_Provider__c.field-meta.xml
<CustomField>
    <fullName>Existing_eComm_DCC_Provider__c</fullName>
    <label>Existing eComm DCC Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>