unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Fintrax_Investment_Index__c.field-meta.xml
<CustomField>
    <fullName>Fintrax_Investment_Index__c</fullName>
    <label>Fintrax Investment Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>