unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Fintrax_Investment_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fintrax_Investment_Rate__c</fullName>
    <label>Fintrax Investment Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>