unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Hit_rate__c.field-meta.xml
<CustomField>
    <fullName>Hit_rate__c</fullName>
    <label>Hit rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>