unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Intern_Tourist_Arrivals__c.field-meta.xml
<CustomField>
    <fullName>Intern_Tourist_Arrivals__c</fullName>
    <label>Intern. Tourist Arrivals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>