unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Intern_Tourist_Exp__c.field-meta.xml
<CustomField>
    <fullName>Intern_Tourist_Exp__c</fullName>
    <label>Intern. Tourist Exp.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>