unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/MOU_signed__c.field-meta.xml
<CustomField>
    <fullName>MOU_signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MOU signed</label>
    <type>Checkbox</type>
</CustomField>