unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/MOU_Signed_date__c.field-meta.xml
<CustomField>
    <fullName>MOU_Signed_date__c</fullName>
    <label>MOU Signed date</label>
    <type>Date</type>
</CustomField>