unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Number_of_Acquirers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Acquirers__c</fullName>
    <label>Number of Acquirers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>