unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Penetration_Rate__c.field-meta.xml
<CustomField>
    <fullName>Penetration_Rate__c</fullName>
    <label>Penetration Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>