unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Rollout_Months__c.field-meta.xml
<CustomField>
    <fullName>Rollout_Months__c</fullName>
    <label>Rollout Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>