unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Total_ATMs__c.field-meta.xml
<CustomField>
    <fullName>Total_ATMs__c</fullName>
    <label>Total ATMs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>