unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Total_Head_Offices__c.field-meta.xml
<CustomField>
    <fullName>Total_Head_Offices__c</fullName>
    <label>Total Head Offices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>