unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Total_Merchants__c.field-meta.xml
<CustomField>
    <fullName>Total_Merchants__c</fullName>
    <label>Total Merchants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>