unpackaged/main/default/objects/Account_Plan_Pre_Sales__c/fields/Total_POS__c.field-meta.xml
<CustomField>
    <fullName>Total_POS__c</fullName>
    <formula>Total_Merchants__c * 1.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total POS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>